[package]
name = "core_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
rand = "0.8.5"
rand_core = "0.6.4"
rsa = "0.9.6"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["net", "rt-multi-thread", "io-util"] }
